apply spacing corrections to VideoInfo for new layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,10 +13,10 @@ body{
 }
 
 .bottom-section{
-    padding: 1rem;
+    padding: 0 1rem 1rem;
 
     @include tablet{
-        padding: 1.75rem 2.25rem 1.75rem 2.375rem;
+        padding: 0 2.25rem 1.75rem 2.375rem;
     }
     
     &__content{
@@ -25,11 +25,29 @@ body{
         max-width: units.$maxWidth;
         margin: auto;
 
-       > *:first-child {
         @include desktop{
-            border-right: 1px solid colors.$secondary-gray;
-            max-width: 68.1%;
+            flex-wrap: nowrap;
         }
-       }
+    }
+
+    &__sub-container{
+        padding-top: 1rem;
+
+        @include tablet{
+            padding-top: 1.75rem;
+        }
+
+        &:first-child{
+            @include desktop{
+                border-right: 1px solid colors.$secondary-gray;
+                max-width: 68.1%;
+            }
+        }
+
+        &:nth-child(2){
+            @include desktop{
+                padding-left: 1.4375rem;
+            }
+        }
     }
 }
