--- a/src/components/NextVideos/NextVideos.scss
+++ b/src/components/NextVideos/NextVideos.scss
@@ -5,19 +5,15 @@
 
 
 .next-videos{
-    max-width: 19.5rem;
+    max-width: 19rem;
+    
     &__title{
         @include fonts.subheader;
         color: colors.$primary-gray;
-        
         margin-bottom: 0.875rem;
 
         @include tablet-only{
             margin-bottom: 1.375rem;
         }
-    }
-
-    @include desktop{
-        padding-left: 1.4375rem;
     }
 }
