--- a/src/components/VideoInfo/VideoInfo.scss
+++ b/src/components/VideoInfo/VideoInfo.scss
@@ -8,7 +8,6 @@
 .video-info{
     &__title{
         @include fonts.pageheader;
-        // border-bottom: 1px solid colors.$secondary-gray;
         @include mixins.divider;
         padding-top: 0.125rem;
         padding-bottom: 0.875rem;
@@ -41,11 +40,15 @@
             @include tablet{
                 margin-right: 2rem;
             }
+
         }
 
         &--right{
             @include tablet{
                 margin-left: 2rem;
+            }
+            @include desktop{
+                margin-left: 1.5rem;
             }
         }
         
@@ -64,6 +67,9 @@
         
         @include tablet{
             padding-top: 0.5rem;
+        }
+        @include desktop{
+            padding-right: 1.375rem;
         }
     }
 
